--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </audio>
       <p class="happiness">Join us in our happiness!<br></a></p>
       <div class="actions">
-        <a href="https://g.co/kgs/Fg2razi" target="_blank">
+        <a href="https://maps.app.goo.gl/MjEjbGDJovFeSRdQA" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
       </div>
