--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
           font-size: 1.5rem;
         }
       </style>
+      <audio autoplay loop volume="0.4">
+        <source src="./assets/mp3/song.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
    </head>
    <body> 
     <script type="text/javascript" src="./cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -228,13 +232,9 @@
          Can't wait to celebrate auspicious moment of us with you! <br>
          <span></span>
       </p>
-      <audio autoplay loop volume="0.4">
-        <source src="./assets/mp3/song.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
       <p class="happiness">Join us in our happiness!<br></a></p>
       <div class="actions">
-        <a href="https://maps.app.goo.gl/MjEjbGDJovFeSRdQA" target="_blank">
+        <a href="https://g.co/kgs/Fg2razi" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
       </div>
