--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
       </style>
       <audio autoplay loop volume="0.4">
-        <source src="./assets/mp3/song.mp3" type="audio/mpeg">
+        <source src="/assets/mp3/song.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
    </head>
