--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" >
    <head>
+    <audio autoplay loop>
+      <source src="song.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
       <link rel="shortcut icon" href="favicon.png" type="image/png"> 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -63,10 +67,6 @@
           font-size: 1.5rem;
         }
       </style>
-      <audio autoplay loop volume="0.4">
-        <source src="/assets/mp3/song.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
    </head>
    <body> 
     <script type="text/javascript" src="./cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -101,7 +101,7 @@
            <div class="col-md-10">
              <ul class="timeline animate-box">
                <li class="animate-box">
-                 <div class="timeline-badge" style="background-image:url(/assets/img/story_first_meet_icon.png);"></div>
+                 <div class="timeline-badge" style="background-image:url(story_first_meet_icon.png);"></div>
                  <div class="timeline-panel">
                    <div class="timeline-heading">
                      <h3 class="timeline-title">First We Met</h3>
@@ -113,7 +113,7 @@
                  </div>
                </li>
                <li class="timeline-inverted animate-box">
-                 <div class="timeline-badge" style="background-image:url(/assets/img/engaged.png);"></div>
+                 <div class="timeline-badge" style="background-image:url(engaged.png);"></div>
                  <div class="timeline-panel">
                    <div class="timeline-heading">
                      <h3 class="timeline-title">Engagement</h3>
@@ -125,7 +125,7 @@
                  </div>
                </li>
                <li class="animate-box">
-                 <div class="timeline-badge" style="background-image:url(/assets/img/story_pre_wedding.png);"></div>
+                 <div class="timeline-badge" style="background-image:url(story_pre_wedding.png);"></div>
                  <div class="timeline-panel">
                    <div class="timeline-heading">
                      <h3 class="timeline-title">Wedding...</h3>
@@ -259,5 +259,4 @@ our wedding to be held on 16th September  at Ram Seetha Hall, Rajakilpakkam, Che
        </div>
    </div>
 </footer>
-
 </html>
