--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" >
    <head>
-    <audio autoplay loop>
-      <source src="song.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
       <link rel="shortcut icon" href="favicon.png" type="image/png"> 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -250,6 +246,10 @@ I cordially invite you and your family to
 our wedding to be held on 16th September  at Ram Seetha Hall, Rajakilpakkam, Chennai, Tamil Nadu - 600073 from 9:00 AM onwards.
 
 -->
+<audio controls autoplay>
+  <source src="song.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <footer class="footer">
    <div class="footer-container">
        <div class="footer-left">
