--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <div class="card grey-700-bg lighten-1 text-center z-depth-2 justify-content-center m-3 p-2 col-xs-12 col-md-4">
         <div class="card_title">
           <br>
-          <h2 class="main-events-title text-center h2-responsive">Reception</h2>
+          <h2 class="main-events-title text-center h2-responsive">Marriage</h2>
         </div>
         <hr class="violet">
         <div class="card-body">
