updated pics and bg colour

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <style>
         /* CSS styles */
         .card {
-          background-color: white; /* Set background to white */
+          background-color: lavender; /* Set background to white */
           color: #674ea7; /* Set text color to specific shade of purple */
           border-radius: 10px;
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for card effect */
@@ -225,12 +225,13 @@
   <hr class="style_section d-flex fluid m-5">
 
      <section class="engagement-pics">
-         <h2>Glimpse of our Engagement 😍</h2>
+         <h2>Moments of Magic ✨</h2>
          <div class="gallery">
              <img src="engagement1.jpg" alt="Engagement Pic 1">
              <img src="engagement2.jpg" alt="Engagement Pic 2">
              <img src="engagement3.jpg" alt="Engagement Pic 3">
              <img src="engagement4.jpg" alt="Engagement Pic 4">
+             <img src="engagement5.jpg" alt="Engagement Pic 5">
              <!-- Add more images as needed -->
          </div>
      </section>
